<resources>
    <string name="app_name">GKUser</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <!-- navigation drawer item labels  -->
    <string name="nav_item_cart">Cart</string>
    <string name="nav_item_order_history">Order history</string>
    <string name="nav_item_order_status">Order status</string>
    <string name="nav_item_profie">Profile</string>
    <string name="nav_item_login">Login</string>
    <string name="nav_item_who_we_are">Who we are</string>
    <string name="nav_item_how_it_works">How it works</string>
    <string name="nav_item_tandC">Terms and conditions</string>

    <!-- navigation drawer item labels  -->
    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_cart</item>
        <item>@string/nav_item_order_history</item>
        <item>@string/nav_item_order_status</item>
        <item>@string/nav_item_profie</item>
        <item>@string/nav_item_login</item>
        <item>@string/nav_item_who_we_are</item>
        <item>@string/nav_item_how_it_works</item>
        <item>@string/nav_item_tandC</item>

    </string-array>

    <string name="title_cart">@string/nav_item_cart</string>
    <string name="title_order_history">@string/nav_item_order_history</string>
    <string name="title_order_status">@string/nav_item_order_status</string>

    <string name="title_profile">@string/nav_item_profie</string>
    <string name="title_login">@string/nav_item_login</string>
    <string name="title_who_we_are">@string/nav_item_who_we_are</string>
    <string name="title_how_it_works">@string/nav_item_how_it_works</string>
    <string name="title_tandc">@string/nav_item_tandC</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>

    <string name="forgot">FORGOT PASSWORD? </string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="signup">Sign Up</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="btn_sign_up">Sigin in</string>>
    <string name="err_msg_email">Enter valid email addresss</string>
    <string name="err_msg_password">Enter the password</string>
    <string name="reset">Reset Password</string>

    <string name="mandatory">All fields are mandatory.</string>
    <string name="current">Old password</string>
    <string name="NewPassword">New password</string>
    <string name="ConfirmNewPasword">Confirm password</string>
    <string name="forgotPasswords">Forgot Password</string>
    <string name="submit">Submit</string>

    <string name="err_msg_password_char">Enter atleast one char</string>
    <string name="err_msg_password_digit">Enter atleast one digit </string>
    <string name="err_msg_password_length">password should contain atleast 8 or more alphanumberic.</string>
    <string name="validpasssword">Please enter valid</string>
    <string name="confimation">Confrimation Message</string>
    <string name="validationMsg">Validation Failed!</string>
    <string name="sucessfulllogin">Welcome </string>
    <string name="title_activity_sign_up">SignUpActivity</string>


    <string name="first">First name</string>
    <string name="last">Last name</string>
    <string name="email">Email id</string>
    <string name="password">Password</string>
    <string name="fixed">Fixed</string>
    <string name="mobile">Mobile</string>
    <string name="address">Address</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="zip">Zip</string>
    <string name="tandc">By Signing up, I agree to </string>
    <string name="terms_of_Service">Terms of Service</string>
    <string name="and">and</string>
    <string name="privacy">Privacy Policy.</string>
</resources>
