<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#00000000"
    android:layout_marginBottom="45dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_deliver"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_margin="15dp"
        android:layout_alignParentStart="true">

        <TextView
            android:id="@+id/loginText"
            style="@style/loginPage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="@color/polygone"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_toRightOf="@+id/line5"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <View
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/loginText"
            android:layout_marginBottom="10dp"
            android:background="@color/viewline" />

        <TextView
            android:id="@+id/tv_email"
            style="@style/loginPage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/line"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="50dp"
            android:padding="0dp"
            android:paddingRight="50dp"
            android:text="@string/hint_email"
            android:textColor="@color/polygone" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignBottom="@+id/tv_email"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/line"
            android:layout_marginRight="10dp"
            android:layout_toEndOf="@+id/tv_email"
            android:background="@drawable/rounded_corner_edittext"
            android:inputType="textEmailAddress"
            android:maxLength="248"
            android:padding="2dp"
            android:singleLine="true"
            tools:ignore="RtlCompat" />

        <View
            android:id="@+id/line2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_below="@+id/et_email"
            android:layout_marginBottom="10dp" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignBottom="@+id/tv_Password"
            android:layout_alignEnd="@+id/et_email"
            android:layout_alignRight="@+id/et_email"
            android:layout_below="@+id/line2"
            android:layout_toRightOf="@+id/tv_email"
            android:background="@drawable/rounded_corner_edittext"
            android:inputType="textWebPassword"
            android:maxLength="32"
            android:padding="2dp"
            android:singleLine="true"
            tools:ignore="RtlCompat" />

        <View
            android:id="@+id/line3"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_below="@+id/et_password"
            android:layout_marginBottom="10dp" />

        <TextView
            android:id="@+id/tv_reset_password"
            style="@style/loginPage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/forgotPassword"
            android:layout_marginTop="9dp"
            android:background="@color/reset_password"
            android:text="@string/reset"
            android:textAlignment="center"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/tv_Password"
            style="@style/loginPage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/tv_email"
            android:layout_alignStart="@+id/tv_email"
            android:layout_below="@+id/line2"
            android:padding="0dp"
            android:paddingRight="50dp"
            android:text="@string/hint_password"
            android:textColor="@color/polygone" />

        <View
            android:id="@+id/line5"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_below="@+id/tv_reset_password"
            android:background="@color/white"
            android:visibility="gone" />

        <TextView
            android:id="@+id/forgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/et_password"
            android:layout_alignRight="@+id/et_password"
            android:layout_below="@+id/line3"
            android:gravity="right"
            android:text="@string/forgot"
            android:textColor="@color/forgotPassword"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/line5"
            android:background="@color/polygone"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_sigin"
                style="@style/loginPage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/line4"
                android:layout_toEndOf="@+id/tv_Password"
                android:layout_toRightOf="@+id/tv_Password"
                android:layout_weight=".49"
                android:text="@string/signup"
                android:textAlignment="center"
                android:textColor="@android:color/white" />

            <View
                android:id="@+id/line4"
                style="@style/loginPage"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_alignLeft="@+id/tv_cancel"
                android:layout_below="@+id/tv_reset_password"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="@android:color/white" />

            <TextView
                android:id="@+id/tv_login"
                style="@style/loginPage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/tv_cancel"
                android:layout_alignBottom="@+id/tv_cancel"
                android:layout_toEndOf="@+id/tv_cancel"
                android:layout_toRightOf="@+id/tv_cancel"
                android:layout_weight=".49"
                android:background="@color/polygone"
                android:text="@string/login"
                android:textAlignment="center"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/llTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="35dp"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/llTop"
            android:padding="3dp"
            android:layout_alignParentBottom="true"
            android:background="@null"
            android:src="@drawable/ic_highlight_off_black_24dp" />

    </LinearLayout>

</RelativeLayout>